--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-rate-limit": "^6.3.0",
     "helmet": "^5.0.2",
     "hpp": "^0.2.3",
+    "html-to-text": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
     "mongoose-unique-validator": "^3.0.0",
@@ -38,6 +39,7 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "path": "^0.12.7",
+    "pug": "^3.0.2",
     "rxjs": "~7.5.0",
     "sharp": "^0.30.3",
     "tslib": "^2.3.0",
