--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
     "@angular/material": "^13.2.6",
+    "@angular/material-moment-adapter": "^13.3.3",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@types/mapbox-gl": "^2.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
+    "chart.js": "^3.7.1",
+    "chartjs-plugin-annotation": "^1.4.0",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -33,15 +38,22 @@
     "hpp": "^0.2.3",
     "html-to-text": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
+    "kafkajs": "^1.16.0",
+    "leaflet": "^1.8.0",
+    "mapbox-gl": "^2.8.2",
+    "moment": "^2.29.3",
     "mongoose": "^5.13.14",
     "mongoose-unique-validator": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "ng2-charts": "^3.0.8",
     "nodemailer": "^6.7.2",
     "path": "^0.12.7",
     "pug": "^3.0.2",
     "rxjs": "~7.5.0",
     "sharp": "^0.30.3",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "tslib": "^2.3.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1",
